--- a/src/MainDashboard/MainDashboard.css
+++ b/src/MainDashboard/MainDashboard.css
@@ -1,5 +1,8 @@
+* {
+  box-sizing: border-box;
+}
 #hero {
-  font-size: 40px;
+  font-size: 50px;
   text-align: center;
 }
 header p {
@@ -7,22 +10,19 @@ header p {
   font-size: 18px;
 }
 
- /* .buttons {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+ .buttons {
   margin-top: 30px;
-  margin-left: 20px;
-  margin-right: 20px;
-  padding: 20px;
+  padding: 0px;
   height: 100px;
 } 
 
 .button {
-  padding: 30px;
+  padding: 35px;
   font-size: 25px;
-  width: 23%;
-}  */
+  width: 20%;
+  border-radius: 20px;
+  
+} 
 
 .recents {
   display: flex;
