--- a/src/MainDashboard/MainDashboard.css
+++ b/src/MainDashboard/MainDashboard.css
@@ -24,13 +24,14 @@ header p {
   
 } 
 
-.recents {
+.results {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  margin-top: 20px;
 }
 
-.recents div {
+.results div {
   width: 70%;
   margin: 10px;
   margin-left: 50%;
@@ -39,6 +40,6 @@ header p {
   background-color:white;
   border: 1px black solid;
 }
-.recents h3, p {
+.results h3, p {
   text-align: center;
 }
