--- a/src/Dashboards/MainDashboard/Modals/modal.css
+++ b/src/Dashboards/MainDashboard/Modals/modal.css
@@ -19,13 +19,16 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  width: 100%;
+  height: fit-content;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .buttons-container .view {
-  width: 200px;
-  text-align: center;
+  width: 150px;
   border: 1px black solid;
-  margin: 15px;
+  margin: 5px;
   height: 75px;
   /* padding-top: 30px; */
   display: flex;
