--- a/src/Footer/footer.css
+++ b/src/Footer/footer.css
@@ -1,22 +1,22 @@
 .navbar {
-  
-  overflow: hidden;
+
   position: fixed;
-  left: 10%;
+  left: 25%;
   bottom: 0;
   width: 80%;
   height: 8%;
   display: flex;
-  justify-content: fill;
+  justify-content: space-evenly;
   align-items: fill;
 }
 .footer-buttons {
   padding: 15px;
-  margin:0px;
-  width:33%;
+  margin:.2px;
+  width: 35%;
   font-size: 15px;
+  /* border: 1px solid black; */
 }
 
-#footer-left {
+/* #footer-left {
   margin-left: 25%;
-}
+} */
