--- a/src/Dashboards/MainDashboard/MainDashboard.css
+++ b/src/Dashboards/MainDashboard/MainDashboard.css
@@ -24,6 +24,7 @@ header p {
   border-radius: 20px;
   background-color: white;
   border: black 1px solid;
+  margin-bottom: 30px;
 } 
 
 .results {
