--- a/src/Footer/footer.css
+++ b/src/Footer/footer.css
@@ -1,5 +1,5 @@
 .navbar {
-
+  z-index: 5;
   position: fixed;
   left: 25%;
   bottom: 0;
@@ -14,6 +14,7 @@
   margin:.2px;
   width: 35%;
   font-size: 15px;
+  z-index: 3;
   /* border: 1px solid black; */
 }
 
