--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -9,7 +9,7 @@
   justify-content: space-evenly;
   align-items: fill;
 }
-.footer-buttons {
+.Navbar-buttons {
   padding: 15px;
   margin:.2px;
   width: 35%;
@@ -18,6 +18,6 @@
   /* border: 1px solid black; */
 }
 
-/* #footer-left {
+/* #Navbar-left {
   margin-left: 25%;
 } */
