landing page styling and signup/login forms styling done with error handling

--- a/src/Dashboards/MainDashboard/Modals/modal.css
+++ b/src/Dashboards/MainDashboard/Modals/modal.css
@@ -1,4 +1,4 @@
-.viewbuttons {
+/* .viewbuttons {
   position:fixed;
   background: white;
   opacity: 1;
@@ -31,7 +31,7 @@
   margin: 5px;
   height: 75px;
   /* padding-top: 30px; */
-  display: flex;
+  /* display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 20px;
@@ -40,4 +40,4 @@
 .buttons-container a {
   text-decoration: none;
   color: black;
-}
+} */ 
