--- a/src/LandingPage/LogIn/login.css
+++ b/src/LandingPage/LogIn/login.css
@@ -1,11 +1,11 @@
-.signup-modal {
+.login-modal {
   position: absolute;
   width: 450px;
-  height: 530px;
+  height: 480px;
   left: 50%;
   right: 50%;
   transform: translate(-50%, 0%);
-  top: 24%;
+  top: 30%;
   z-index: 100;
   background: #FFFFFF;
   box-shadow: 0px 0px 50px 
@@ -13,24 +13,10 @@
   border-radius: 7px;
 }
 
-.signup-instructions {
-  position: absolute;
-  text-align: center;
-  width: 300px;
-  font-weight: 300;
-  font-size: 13px;
-  line-height: 15px;
-  color: #5C5D5E;
-  transform: translate(-50%, 0%);
-  left: 50%;
-  right: 50%;
-  top: 3%;
-}
-
-.signup-modal #signup-form {
+.login-form {
   display: flex;
   position: absolute;
-  top: 11%;
+  top: 0%;
   flex-direction: column;
   align-items: space-evenly;
   justify-content: space-evenly;
@@ -39,11 +25,11 @@
   z-index: -1;
 }
 
-.signup-modal #signup-form input {
+.login-form input {
   width: 375px;
   height: 45px;
-  margin-top: -15px;
-  margin-bottom: -15px;
+  margin-top: -55px;
+  margin-bottom: -35px;
   position: relative;
   left: 50%;
   right: 50%;
@@ -58,7 +44,7 @@
   padding-left: 10px;
 }
 
-.signup-modal #signup-form label {
+.login-form label {
   font-weight: 600;
   font-size: 15px;
   line-height: 18px;
@@ -66,17 +52,37 @@
   height: 18px;
   position: relative;
   left: 50px;
-  margin-bottom: -50px;
-  margin-top: -30px;
+  margin-bottom: -150px;
+  margin-top: -150px;
 }
 
-.signup-modal #signup-form .signup-button {
-  position: relative;
-  top: 0px;
-  margin-top: -25px;
+.login-button-large {
+  position: absolute;
+  width: 200px;
+  height: 50px;
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%, 0%);
+  top: 72%;
+  background: #69C7BF;
+  box-shadow: 0px 4px 20px
+    rgba(26, 26, 26, 0.2);
+  border-radius: 50px;
+  font-family: 'Work Sans', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+  color: #FFFFFF;
 }
 
-.cancel {
+.login-button-large:hover {
+  cursor: pointer;
+  background: rgb(97, 187, 179);
+}
+
+.cancel-login {
   z-index: -1;
   position: absolute;
   width: 50px;
@@ -84,7 +90,7 @@
   left: 50%;
   right: 50%;
   transform: translate(-50%, 0%);
-  bottom: 6%;
+  bottom: 7.5%;
   font-size: 14px;
   font-weight: 600;
   line-height: 21px;
@@ -93,42 +99,20 @@
   color: #69C7BF;
 }
 
-.cancel:hover {
+.cancel-login:hover {
   cursor: pointer;
 }
 
 /* ERROR HANDLING */
 
-.error-signup-modal {
-  position: absolute;
-  width: 450px;
-  height: 530px;
-  left: 50%;
-  right: 50%;
-  transform: translate(-50%, 0%);
-  top: 24%;
-  z-index: 100;
-  background: #FFFFFF;
-  box-shadow: 0px 0px 50px 
-    rgba(0,0,0,0.2);
-  border-radius: 7px;
-}
-
-.sign-up-error {
-  text-align: center;
+.login-error {
   color: red;
-  font-size: 15px;
-  margin-top: 50px;
+  text-align: center;
 }
-
-.error-signup-modal .signup-instructions {
-  display: none;
-}
-
-.error-signup-modal #signup-form {
+.error-form {
   display: flex;
   position: absolute;
-  top: 11%;
+  top: 0%;
   flex-direction: column;
   align-items: space-evenly;
   justify-content: space-evenly;
@@ -136,27 +120,26 @@
   width: 450px;
   z-index: -1;
 }
-
-.error-signup-modal #signup-form input {
+.error-form input {
   width: 375px;
   height: 45px;
-  margin-top: -15px;
-  margin-bottom: -15px;
+  margin-top: -55px;
+  margin-bottom: -35px;
   position: relative;
   left: 50%;
   right: 50%;
   transform: translate(-50%, 0%);
   padding: 2px;
-  border: 1px solid red;
   border-radius: 6px;
   font-weight: 300;
   font-size: 13px;
   line-height: 15px;
   color: #5C5D5E;
   padding-left: 10px;
+  border: 1px solid red;
 }
 
-.error-signup-modal #signup-form label {
+.error-form label {
   font-weight: 600;
   font-size: 15px;
   line-height: 18px;
@@ -164,12 +147,7 @@
   height: 18px;
   position: relative;
   left: 50px;
-  margin-bottom: -50px;
-  margin-top: -30px;
+  margin-bottom: -150px;
+  margin-top: -150px;
 }
 
-.error-signup-modal #signup-form .signup-button {
-  position: relative;
-  top: 0px;
-  margin-top: -25px;
-}
