--- a/src/Dashboards/MainDashboard/MainDashboard.css
+++ b/src/Dashboards/MainDashboard/MainDashboard.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   box-sizing: border-box;
   -webkit-appearance: none;
 }
@@ -46,4 +46,4 @@ header p {
 }
 .results h3, p {
   text-align: center;
-}
+} */
