--- a/src/Dashboards/MainDashboard/MainDashboard.css
+++ b/src/Dashboards/MainDashboard/MainDashboard.css
@@ -47,3 +47,66 @@ header p {
 .results h3, p {
   text-align: center;
 } */
+
+body {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(229, 229, 229, 0.22);
+}
+
+.main-dashboard {
+
+  background-color: white;
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%, 0%);
+}
+
+.main-dashboard-content {
+  position: absolute;
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%, 0%);
+  top: 28%;
+}
+.main-dashboard h1 {
+  position: absolute;
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%, 0%);
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 28px;
+  color: #094A59;
+  width: 300px;
+  text-align: center;
+}
+
+.add-button {
+  position: absolute;
+  left: 50%;
+  right: 50%;
+  top: 70%;
+  transform: translate(-50%, 0%);
+  width: 75px;
+  height: 75px;
+  background: #FFFFFF;
+  border: 2px solid #69C7BF;
+  box-sizing: border-box;
+  border-radius: 50%;
+  color: #69C7BF;
+  font-size: 25px;
+  font-weight: 600;
+  transition: .8s;
+}
+
+.add-button:hover {
+  background-color: #69C7BF;
+  color: #FFFFFF;
+  cursor: pointer;
+  transition: .5s;
+}
+
