--- a/src/LandingPage/LogIn/login.css
+++ b/src/LandingPage/LogIn/login.css
@@ -75,11 +75,13 @@
   line-height: 21px;
   text-align: center;
   color: #FFFFFF;
+  transition: .5s;
 }
 
 .login-button-large:hover {
   cursor: pointer;
-  background: rgb(97, 187, 179);
+  background-color:rgb(82, 156, 150);
+  transition: 1s;
 }
 
 .cancel-login {
@@ -97,10 +99,13 @@
   text-align: center;
   text-decoration: none;
   color: #69C7BF;
+  transition: 1s;
 }
 
 .cancel-login:hover {
   cursor: pointer;
+  color:rgb(82, 156, 150);
+  transition: 1s;
 }
 
 /* ERROR HANDLING */
