--- a/src/LandingPage/landingpage.css
+++ b/src/LandingPage/landingpage.css
@@ -46,10 +46,12 @@
   line-height: 21px;
   text-align: center;
   color: #FFFFFF;
+  transition: .5s;
 }
 .signup-button:hover {
   cursor: pointer;
-  background: rgb(97, 187, 179);
+  background-color:rgb(82, 156, 150);
+  transition: 1s;
 }
 
 .login-button {
@@ -67,8 +69,10 @@
   text-align: center;
   text-decoration: none;
   color: #69C7BF;
+  transition: .5s;
 }
 .login-button:hover {
   cursor: pointer;
-  color: rgb(85, 165, 158);
+  color:rgb(82, 156, 150);
+  transition: 1s;
 }
