--- a/src/Dashboards/MainDashboard/Modals/addmodal.css
+++ b/src/Dashboards/MainDashboard/Modals/addmodal.css
@@ -9,7 +9,7 @@
   box-shadow: 0px 4px 50px
     rgba(0,0,0,0.2);
   border-radius: 7px;
-  z-index: 5;
+  z-index: 1;
 }
 
 .add-instructions {
@@ -56,9 +56,7 @@
 
 .cancel-add {
   color: #69C7BF;
-  display: inline-block;
-  margin-left: 50%;
-  transform: translate(-50%);
+  text-align: center;
   margin-top: 45px;
   transition: .3s;
 }
