all forms styled

--- a/src/Forms/addform.css
+++ b/src/Forms/addform.css
@@ -1,7 +1,7 @@
-.add-movie-modal {
+.add-form-modal {
   position: absolute;
   width: 500px;
-  height: 525px;
+  height: 555px;
   left: 50%;
   right: 50%;
   transform: translate(-50%, 0%);
@@ -13,23 +13,24 @@
   border-radius: 7px;
 }
 
-.addMovie-form {
+.add-form-form {
   display: flex;
-  position: absolute;
+  position: relative;
   top: 3%;
   flex-direction: column;
   align-items: space-evenly;
   justify-content: space-evenly;
-  height: 500px;
-  width: 450px;
+  height: 555px;
+  width: 455px;
   left: 50%;
   right: 50%;
   transform: translate(-50%, 0%);
   z-index: 3;
   padding-top: 10px;
+  margin-top: -10px;
 }
 
-.addMovie-form input {
+.add-form-form input {
   width: 375px;
   height: 45px;
   margin-left: 50%;
@@ -42,9 +43,11 @@
   line-height: 15px;
   color: #5C5D5E;
   padding-left: 10px;
+  margin-top: -15px;
+  margin-bottom: -15px;
 }
 
-.addMovie-form textarea {
+.add-form-form textarea{
   width: 375px;
   height: 80px;
   border: 1px solid #E5E5E5;
@@ -57,9 +60,11 @@
   color: #5C5D5E;
   padding-left: 10px;
   padding-top: 8px;
+  margin-top: -15px;
+  margin-bottom: -15px;
 }
 
-.addMovie-form label {
+.add-form-form label {
   font-weight: 600;
   font-size: 15px;
   line-height: 18px;
@@ -67,48 +72,45 @@
   height: 18px;
   position: relative;
   left: 50px;
-  margin-bottom: 0px;
-  margin-top: 3px;
+  margin-top: -10px;
+  margin-bottom: -10px;
 }
 
-
-
-.submitmovie-button {
-width: 200px;
-height: 50px;
-background: #69C7BF;
-box-shadow: 0px 4px 20px rgba(26, 26, 26, 0.2);
-border-radius: 50px;
-margin-left: 50%;
-transform: translate(-50%);
-text-align: center;
-font-size: 18px;
-font-weight: 600;
-line-height: 21px;
-color: #FFFFFF;
-margin-top: 10px;
-transition: .5s;
-}
-
-.submitmovie-button:hover {
-  cursor: pointer;
-  background-color:rgb(82, 156, 150);
-  transition: 1s;
-}
-
-.cancel-movie {
+.cancel-add-form {
   color: #69C7BF;
   text-align: center;
   margin-left: 50%;
   transform: translate(-50%);
-  margin-top: 10px;
   transition: .3s;
-  margin-bottom: 0px;
+  margin-bottom: -10px;
+  margin-top: -10px;
 }
 
-.cancel-movie:hover {
+.cancel-add-form:hover {
   cursor: pointer;
   color: black;
   transition: .5s;
+}
 
+.add-form-button {
+  width: 200px;
+  height: 50px;
+  background: #69C7BF;
+  box-shadow: 0px 4px 20px rgba(26, 26, 26, 0.2);
+  border-radius: 50px;
+  margin-left: 50%;
+  transform: translate(-50%);
+  text-align: center;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 21px;
+  color: #FFFFFF;
+  transition: .5s;
+  margin-bottom: -10px;
+}
+
+.add-form-button:hover {
+  cursor: pointer;
+  background-color:rgb(82, 156, 150);
+  transition: 1s;
 }
