--- a/src/Dashboards/MainDashboard/MainDashboard.css
+++ b/src/Dashboards/MainDashboard/MainDashboard.css
@@ -31,7 +31,7 @@ body {
   font-size: 24px;
   line-height: 28px;
   color: #094A59;
-  width: 300px;
+  width: 250px;
   text-align: center;
 }
 
@@ -39,7 +39,7 @@ body {
   position: absolute;
   left: 50%;
   right: 50%;
-  top: 100%;
+  top: 90%;
   transform: translate(-50%, 0%);
   width: 75px;
   height: 75px;
@@ -51,6 +51,7 @@ body {
   font-size: 25px;
   font-weight: 600;
   transition: .8s;
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
 }
 
 .add-button:hover {
