--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -1,27 +1,3 @@
-/* .navbar {
-  z-index: 5;
-  position: fixed;
-  left: 25%;
-  bottom: 0;
-  width: 80%;
-  height: 8%;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: fill;
-}
-.Navbar-buttons {
-  padding: 15px;
-  margin:.2px;
-  width: 35%;
-  font-size: 15px;
-  z-index: 3; */
-  /* border: 1px solid black; */
-
-
-/* #Navbar-left {
-  margin-left: 25%;
-} */
-
 .navbar {
   background-color: #69C7BF;
   height: 160px;
@@ -35,7 +11,7 @@
   width: 175px;
   height: 45px;
   top: 50%;
-  left: 22%;
+  left: 18%;
   transform: translate(0, -15%);
 }
 .navbar-home:hover {
@@ -58,6 +34,8 @@
   line-height: 23px;
   color:#FFFFFF;
   transition: .4s; 
+  position: relative;
+  right: 85%;
 }
 
 .logout-button:hover {
@@ -74,6 +52,6 @@
   width: 22px;
   height: 22px;
   position: absolute;
-  right: 170%;
+  right: 250%;
   top: 33%;
 }
