--- a/src/ActivityCards/Activity.css
+++ b/src/ActivityCards/Activity.css
@@ -1,3 +1,127 @@
 /* .deletebutton {
   margin-bottom: 10px; 
 } */
+
+.activity-results {
+  display: flex;
+  position: relative;
+  top: 80px;
+  flex-wrap: wrap;
+  width: 720px;
+  justify-content: space-evenly;
+}
+
+.activity-div {
+  border: 1px solid #69C7BF;
+  border-radius: 6px;
+  background: white;
+  padding: 20px;
+  width: 340px;
+  max-width: 350px;
+  height: auto;
+  min-height: 202px;
+  z-index: 1;
+  position: relative;
+  left: 10%;
+  margin: 10px;
+}
+
+.activity-title {
+  position: absolute;
+  font-size: 20px;
+  line-height: 19px;
+  font-weight: 600;
+  color: #094A59;
+  top: 10%;
+  margin: 0px;
+}
+
+.activity-genre {
+  height: auto;
+  width: fit-content;
+  min-width: 60px;
+  padding: 5px 12px;
+  background-color: #5C5D5E;
+  border-radius: 50px;
+  font-weight: 600;
+  font-size: 10px;
+  line-height: 12px;
+  color: white;
+  position: absolute;
+  top: 22%;
+  text-align: center;
+  
+}
+
+.activity-rating-good {
+  position: absolute;
+  right: 5%;
+  top: 10%;
+  margin: 0;
+  color:#69C7BF;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 19px;
+}
+
+.activity-rating-ok {
+  position: absolute;
+  right: 5%;
+  top: 10%;
+  margin: 0;
+  color: #F8B653;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 19px;
+}
+
+
+.activity-rating-bad {
+  position: absolute;
+  right: 5%;
+  top: 10%;
+  margin: 0;
+  color:red;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 19px;
+}
+
+.activity-comments {
+  position: absolute;
+  font-weight: 300;
+  font-size: 13px;
+  width: 300px;
+  line-height: 17px;
+  color: #5C5D5E;
+  top: 40%;
+}
+.activity-deletebutton {
+  z-index: 2;
+  position: absolute;
+  top: 80%;
+  border: solid 1px #69C7BF;
+  border-radius: 50px;
+  width: 60px;
+  font-weight: 300;
+  transition: .5s;
+  font-size: 12px;
+}
+
+.activity-deletebutton:hover {
+  cursor: pointer;
+  background-color: #B80F0A;
+  transition: 1s;
+  color: white; 
+  font-weight: 600;
+  border: solid 1px #B80F0A;
+}
+
+.activity-author {
+  font-size: 11px;
+  position: absolute;
+  color: #094A59;
+  top: 13.5%;
+  left: 42%;
+  margin: 0px;
+}
