--- a/src/ActivityCards/Activity.css
+++ b/src/ActivityCards/Activity.css
@@ -10,6 +10,11 @@
   width: 720px;
   justify-content: space-evenly;
 }
+.activity-flex-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
 
 .activity-div {
   border: 1px solid #69C7BF;
@@ -26,13 +31,11 @@
 }
 
 .activity-title {
-  position: absolute;
   font-size: 20px;
   line-height: 19px;
   font-weight: 600;
   color: #094A59;
-  top: 10%;
-  margin: 0px;
+  margin-top: 5px;
 }
 
 .activity-genre {
@@ -46,8 +49,6 @@
   font-size: 10px;
   line-height: 12px;
   color: white;
-  position: absolute;
-  top: 22%;
   text-align: center;
   
 }
@@ -55,7 +56,7 @@
 .activity-rating-good {
   position: absolute;
   right: 5%;
-  top: 10%;
+  top: 8%;
   margin: 0;
   color:#69C7BF;
   font-size: 16px;
@@ -66,7 +67,7 @@
 .activity-rating-ok {
   position: absolute;
   right: 5%;
-  top: 10%;
+  top: 8%;
   margin: 0;
   color: #F8B653;
   font-size: 16px;
@@ -78,7 +79,7 @@
 .activity-rating-bad {
   position: absolute;
   right: 5%;
-  top: 10%;
+  top: 8%;
   margin: 0;
   color:red;
   font-size: 16px;
@@ -87,24 +88,21 @@
 }
 
 .activity-comments {
-  position: absolute;
   font-weight: 300;
   font-size: 13px;
   width: 300px;
   line-height: 17px;
   color: #5C5D5E;
-  top: 40%;
 }
 .activity-deletebutton {
   z-index: 2;
-  position: absolute;
-  top: 80%;
   border: solid 1px #69C7BF;
   border-radius: 50px;
   width: 60px;
   font-weight: 300;
   transition: .5s;
   font-size: 12px;
+  margin-top: 5px;
 }
 
 .activity-deletebutton:hover {
@@ -117,10 +115,8 @@
 }
 
 .activity-author {
-  font-size: 11px;
-  position: absolute;
+  font-size: 12px;
   color: #094A59;
-  top: 13.5%;
-  left: 42%;
-  margin: 0px;
+  margin-top: -10px;
+
 }
