--- a/src/Dashboards/MainDashboard/MainDashboard.css
+++ b/src/Dashboards/MainDashboard/MainDashboard.css
@@ -1,63 +1,130 @@
-body {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(229, 229, 229, 0.22);
+@media only screen and (max-width: 600px) {
+  body {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(229, 229, 229, 0.22);
+  }
+
+  .main-dashboard {
+    background-color: white;
+    width: 70%;
+    height: 100%;
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+  }
+
+  .main-dashboard-content {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    top: 10%;
+    background-color: white;
+  }
+  .main-dashboard h1 {
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, 0%);
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 28px;
+    color: #094A59;
+    width: 250px;
+    text-align: center;
+  }
+
+  .add-button {
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    top: 80%;
+    transform: translate(-50%, 0%);
+    width: 75px;
+    height: 75px;
+    background: #FFFFFF;
+    border: 2.2px solid #69C7BF;
+    box-sizing: border-box;
+    border-radius: 50%;
+    color: #69C7BF;
+    font-size: 25px;
+    font-weight: 600;
+    transition: .8s;
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
+  }
+
+  .add-button:hover {
+    background-color: #69C7BF;
+    color: #FFFFFF;
+    cursor: pointer;
+    transition: .5s;
+  }
 }
 
-.main-dashboard {
 
-  background-color: white;
-  width: 60%;
-  height: 100%;
-  position: absolute;
-  left: 50%;
-  right: 50%;
-  transform: translate(-50%, 0%);
-}
 
-.main-dashboard-content {
-  position: absolute;
-  left: 50%;
-  right: 50%;
-  transform: translate(-50%, 0%);
-  top: 28%;
-}
-.main-dashboard h1 {
-  position: absolute;
-  left: 50%;
-  right: 50%;
-  transform: translate(-50%, 0%);
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 28px;
-  color: #094A59;
-  width: 250px;
-  text-align: center;
-}
+@media only screen and (min-width: 601px) {
+  body {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(229, 229, 229, 0.22);
+  }
 
-.add-button {
-  position: absolute;
-  left: 50%;
-  right: 50%;
-  top: 90%;
-  transform: translate(-50%, 0%);
-  width: 75px;
-  height: 75px;
-  background: #FFFFFF;
-  border: 2.2px solid #69C7BF;
-  box-sizing: border-box;
-  border-radius: 50%;
-  color: #69C7BF;
-  font-size: 25px;
-  font-weight: 600;
-  transition: .8s;
-  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
-}
+  .main-dashboard {
 
-.add-button:hover {
-  background-color: #69C7BF;
-  color: #FFFFFF;
-  cursor: pointer;
-  transition: .5s;
-}
+    background-color: white;
+    width: 60%;
+    height: 100%;
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, 0%);
+  }
 
+  .main-dashboard-content {
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, 0%);
+    top: 28%;
+  }
+  .main-dashboard h1 {
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, 0%);
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 28px;
+    color: #094A59;
+    width: 250px;
+    text-align: center;
+  }
+
+  .add-button {
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    top: 90%;
+    transform: translate(-50%, 0%);
+    width: 75px;
+    height: 75px;
+    background: #FFFFFF;
+    border: 2.2px solid #69C7BF;
+    box-sizing: border-box;
+    border-radius: 50%;
+    color: #69C7BF;
+    font-size: 25px;
+    font-weight: 600;
+    transition: .8s;
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
+  }
+
+  .add-button:hover {
+    background-color: #69C7BF;
+    color: #FFFFFF;
+    cursor: pointer;
+    transition: .5s;
+  }
+}
