--- a/src/LandingPage/landingpage.css
+++ b/src/LandingPage/landingpage.css
@@ -4,27 +4,24 @@
   font-style: normal;
 }
 
-
-
-
 .hero-img {
   position: absolute;
-  width: 293px;
-  height: 73px;
+  width: 243px;
+  height: 63px;
   left: 50%;
   right: 50%;
   transform: translate(-50%, 0%);
-  top: 20%;
+  top: 15%;
 }
 
 #placeholder-img {
   position: absolute;
-  width: 235px;
-  height: 232px;
+  width: 205px;
+  height: 202px;
   left: 50%;
   right: 50%;
   transform: translate(-50%, 0%);
-  top: 38%
+  top: 30%
 }
 
 .signup-button {
@@ -32,9 +29,8 @@
   width: 200px;
   height: 50px;
   left: 50%;
-  right: 50%;
   transform: translate(-50%, 0%);
-  top: 80%;
+  top: 68%;
   background: #69C7BF;
   box-shadow: 0px 4px 20px
     rgba(26, 26, 26, 0.2);
@@ -60,9 +56,8 @@
   width: 60px;
   height: 20px;
   left: 50%;
-  right: 50%;
   transform: translate(-50%, 0%);
-  top: 86%;
+  top: 73.5%;
   font-size: 18px;
   font-weight: 600;
   line-height: 21px;
@@ -75,4 +70,83 @@
   cursor: pointer;
   color:rgb(82, 156, 150);
   transition: 1s;
+}
+
+
+@media only screen and (width: 1050px) {
+  * {
+    box-sizing: border-box;
+    font-family: 'Work Sans', sans-serif;
+    font-style: normal;
+  }
+
+  .hero-img {
+    position: absolute;
+    width: 293px;
+    height: 73px;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, 0%);
+    top: 20%;
+  }
+
+  #placeholder-img {
+    position: absolute;
+    width: 235px;
+    height: 232px;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, 0%);
+    top: 38%
+  }
+
+  .signup-button {
+    position: absolute;
+    width: 200px;
+    height: 50px;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, 0%);
+    top: 80%;
+    background: #69C7BF;
+    box-shadow: 0px 4px 20px
+      rgba(26, 26, 26, 0.2);
+    border-radius: 50px;
+    font-family: 'Work Sans', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #FFFFFF;
+    transition: .5s;
+  }
+  .signup-button:hover {
+    cursor: pointer;
+    background-color:rgb(82, 156, 150);
+    transition: 1s;
+  }
+
+  .login-button {
+    z-index: -1;
+    position: absolute;
+    width: 60px;
+    height: 20px;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, 0%);
+    top: 86%;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 21px;
+    text-align: center;
+    text-decoration: none;
+    color: #69C7BF;
+    transition: .5s;
+  }
+  .login-button:hover {
+    cursor: pointer;
+    color:rgb(82, 156, 150);
+    transition: 1s;
+  }
 }
