--- a/src/LandingPage/landingpage.css
+++ b/src/LandingPage/landingpage.css
@@ -34,6 +34,14 @@
     height: 25%;
     margin-bottom: 0px;
   }
+  .signinbuttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 100px;
+    height: 100px;
+    justify-content: space-evenly;
+  }
 
   .signup-button {
     width: 200px;
@@ -50,8 +58,6 @@
     text-align: center;
     color: #FFFFFF;
     transition: .5s;
-    margin-bottom: -100px;
-    margin-top: -60px;
   }
 
   .signup-button:hover {
@@ -71,7 +77,6 @@
     text-decoration: none;
     color: #69C7BF;
     transition: .5s;
-    margin-bottom: 100px;
   }
   .login-button:hover {
     cursor: pointer;
