--- a/src/LandingPage/landingpage.css
+++ b/src/LandingPage/landingpage.css
@@ -40,7 +40,7 @@
     align-items: center;
     margin-bottom: 100px;
     height: 100px;
-    justify-content: space-evenly;
+    justify-content: space-around;
   }
 
   .signup-button {
@@ -67,7 +67,7 @@
   }
 
   .login-button {
-    z-index: -1;
+    z-index: 1;
     width: 60px;
     height: 20px;
     font-size: 18px;
