--- a/src/Dashboards/MainDashboard/MainDashboard.css
+++ b/src/Dashboards/MainDashboard/MainDashboard.css
@@ -1,4 +1,8 @@
 @media only screen and (max-width: 600px) {
+  html {
+    width: 100%;
+    height: 100%;
+  }
   body {
     width: 100%;
     height: 100%;
