--- a/src/LandingPage/SignUp/signUp.css
+++ b/src/LandingPage/SignUp/signUp.css
@@ -6,7 +6,7 @@
     height: 500px;
     left: 50%;
     transform: translate(-50%, 0%);
-    top: 20%;
+    top: 15%;
     z-index: 100;
     background: #FFFFFF;
     box-shadow: 0px 0px 50px 
@@ -174,6 +174,8 @@
   .error-signup-modal #signup-form .signup-button {
     position: absolute;
     top: 61%;
+    left: 50%;
+    transform: translate(-50%)
   }
 }
 
