--- a/src/Navbar/footer.css
+++ b/src/Navbar/footer.css
@@ -1,9 +1,9 @@
 
 @media only screen and (max-width: 599px) {
   .footer {
-    position: fixed;
-    bottom: 0px;
-    width: 100%;
+    position: absolute;
+    bottom: 0;
+    width: inherit;
     height: 70px;
     display: flex;
     flex-direction: row;
