--- a/src/Dashboards/MainDashboard/MainDashboard.css
+++ b/src/Dashboards/MainDashboard/MainDashboard.css
@@ -3,21 +3,19 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow: hidden;
   }
   html {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
- 
+    overflow:auto;
   }
   .root {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
   }
   .app {
     width: 100%;
@@ -48,6 +46,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
   }
 
   .main-dashboard h1 {
