--- a/src/Dashboards/activitydash.css
+++ b/src/Dashboards/activitydash.css
@@ -5,45 +5,54 @@
     height: 100%;
     background-color: rgba(229, 229, 229, 0.22);
   }
-
-  .activity-dash {
-    width: 70%;
-    height: 100%;
-    background-color: white;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    z-index: -2;
+  .activity-results {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: space-evenly;
+    z-index: -3;
+    margin-top: 20px;
+    margin-bottom: 60px;
   }
 
-  .activity-dash-content {
-    position: absolute;
-    left: 50%;
+  .activity-dash-container {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+  }
+  .activity-dash {
     width: 100%;
     height: 100%;
-    transform: translate(-50%);
-    top: 28%;
     background-color: white;
-    z-index: -5;
+    z-index: -2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .activity-add-div {
+    display: flex;
+    width: 300px;
+    margin-top: 800px;
+    align-items: center;
+    justify-content: flex-start;
   }
 
-  .activity-dash-content h1 {
+
+  .activity-dash h1 {
     font-weight: 600;
-    position: relative;
-    left: 9%;
-    top: 5px;
     font-size: 30px;
     line-height: 35px;
     color: #094A59;
   }
   .add-text {
-    position: absolute;
-    left: 22.5%;
-    top: 10.5%;
     font-weight: 300;
     font-size: 13px;
     line-height: 15px;
     color: #5c5d5e;
+    margin-left: 8px;
+    margin-bottom: -6px;
   }
   .add-text:hover {
     cursor: pointer;
@@ -51,18 +60,18 @@
   }
 
   .activity-add-button{
-    position: absolute;
-    left: 10%;
-    top: 10%;
-    width: 25px;
-    height: 25px;
+    width: 18px;
+    height: 18px;
     border: 1px solid #69C7BF;
     border-radius: 50%;
     box-sizing: border-box;
     background-color: white;
     color: #69C7BF;
-    font-size: 17px;
-    text-align: center;
+    font-size: 14px;
+    padding-bottom: 2px;
+    padding-right: 0.5px;
+    margin-left: 25px;
+    margin-bottom: -6px;
   }
 
   .activity-add-button:hover {
