--- a/src/Navbar/footer.css
+++ b/src/Navbar/footer.css
@@ -1,7 +1,7 @@
 
 @media only screen and (max-width: 599px) {
   .footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: inherit;
     height: 55px;
