--- a/src/Dashboards/MainDashboard/MainDashboard.css
+++ b/src/Dashboards/MainDashboard/MainDashboard.css
@@ -84,7 +84,7 @@
 
 
 
-@media only screen and (min-width: 601px) {
+@media only screen and (min-width: 1000px) {
   body {
     width: 100%;
     height: 100%;
@@ -100,38 +100,28 @@
     left: 50%;
     right: 50%;
     transform: translate(-50%, 0%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
   }
 
-  .main-dashboard-content {
-    position: absolute;
-    left: 50%;
-    right: 50%;
-    transform: translate(-50%, 0%);
-    top: 28%;
-  }
   .main-dashboard h1 {
-    position: absolute;
-    left: 50%;
-    right: 50%;
-    transform: translate(-50%, 0%);
     font-weight: 600;
     font-size: 24px;
     line-height: 28px;
     color: #094A59;
     width: 250px;
     text-align: center;
+    margin-top: 150px;
   }
 
   .add-button {
-    position: absolute;
-    left: 50%;
-    right: 50%;
-    top: 90%;
-    transform: translate(-50%, 0%);
     width: 75px;
     height: 75px;
     background: #FFFFFF;
     border: 2.2px solid #69C7BF;
+    margin-top: -25px;
     box-sizing: border-box;
     border-radius: 50%;
     color: #69C7BF;
