--- a/src/Dashboards/MainDashboard/Modals/addmodal.css
+++ b/src/Dashboards/MainDashboard/Modals/addmodal.css
@@ -73,11 +73,12 @@
   }
 }
 
-@media only screen and (min-width: 601px) {
+@media only screen and (min-width: 1000px) {
   .addmodal {
     position: absolute;
     left: 50%;
     right: 50%;
+    top: 40%;
     transform: translate(-50%, 0%);
     width: 450px;
     height: 310px;
