--- a/src/Dashboards/activitydash.css
+++ b/src/Dashboards/activitydash.css
@@ -100,49 +100,53 @@
 
 
 
-@media only screen and (min-width: 601px) {
+@media only screen and (min-width: 1000px) {
   body {
     width: 100%;
     height: 100%;
     background-color: rgba(229, 229, 229, 0.22);
+  }
+  .activity-dash-container {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
   }
 
   .activity-dash {
     width: 60%;
     height: 100%;
     background-color: white;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%)
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .activity-add-div {
+    display: flex;
+    width: 300px;
+    position: static;
+    margin-top: 200px; /* change to 200px */
+    align-items: center;
+    justify-content: flex-start;
   }
 
-  .activity-dash-content {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    top: 28%;
-    width: 100%;
-    height: 100%;
-    background-color: white;
-  }
-
-  .activity-dash-content h1 {
+  .activity-dash h1 {
     font-weight: 600;
-    position: relative;
-    left: 9%;
-    top: -10px;
     font-size: 30px;
     line-height: 35px;
     color: #094A59;
+    margin-left: -200px;
   }
+
   .add-text {
-    position: absolute;
-    left: 14%;
-    top: 9%;
     font-weight: 300;
     font-size: 13px;
     line-height: 15px;
     color: #5c5d5e;
+    margin-left: 15px;
+    margin-bottom: 10px;
   }
   .add-text:hover {
     cursor: pointer;
@@ -150,9 +154,6 @@
   }
 
   .activity-add-button{
-    position: absolute;
-    left: 10%;
-    top: 10%;
     width: 25px;
     height: 25px;
     border: 1px solid #69C7BF;
@@ -162,6 +163,8 @@
     color: #69C7BF;
     font-size: 17px;
     text-align: center;
+    margin-left: 50px;
+    margin-bottom: -1px;
   }
 
   .activity-add-button:hover {
@@ -169,6 +172,17 @@
     color: #FFFFFF;
     cursor: pointer;
     transition: .5s;
+  }
+
+  .activity-results {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-evenly;
+    z-index: 3;
+    margin-top: 20px;
+    margin-bottom: 10px;
   }
 
   .randomdiv {
