--- a/src/settings.css
+++ b/src/settings.css
@@ -93,52 +93,53 @@
   }
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 1000px) {
+
+  body {
+    width: 100%;
+    height: 100%;
+    background-color: white;
+  }
+
+  .settings-container {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+  }
+
   .main-settings {
     background-color: white;
     width: 60%;
     height: 100%;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, 0%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
-  .main-settings-content {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, 0%);
-    top: 20%;
-    width: 100%;
-    height: 100%;
-
-  }
-
-  .main-settings-content h1 {
-    position: absolute;
+  .main-settings h1 {
     font-weight: 600;
     font-size: 30px;
     line-height: 35px;
     color: #094A59;
-    top: 5%;
-    left: 5%;
+    text-align: center;
+    margin-top: 200px;
   }
   .settings-instructions {
-    position: absolute;
     font-weight: 300;
-    top: 12%;
     font-size: 13px;
-    left: 5.5%;
     width: 300px;
+    text-align: center;
   }
 
   .settings-form {
     display: flex;
     flex-direction: column;
-    align-items: space-evenly;
+    align-items: flex-start;
     justify-content: space-evenly;
-    position: absolute;
-    top: 20%;
     width: 100%;
+    margin-left: 50%;
   }
 
   .settings-form input {
@@ -146,9 +147,8 @@
     border: 1px solid #E5E5E5;
     box-sizing: border-box;
     border-radius: 6px;
-    width: 375px;
+    width: 425px;
     height: 45px;
-    margin-left: 35px;
     padding: 10px;
     font-weight: 300;
     font-size: 13px;
@@ -157,9 +157,9 @@
   }
 
   .settings-form label {
-    margin-left: 35px;
     margin-bottom: 10px;
-    margin-top: 10px;
+    margin-top: 30px;
+    margin-left: 8px;
     font-weight: 600;
     font-size: 15px;
     line-height: 18px;
@@ -174,8 +174,7 @@
     font-size: 15px;
     font-weight: 600;
     text-align: center;
-    margin-top: 20px;
-    margin-left: 30px;
+    margin-top: 40px;
     color: white;
     transition: .7s;
   }
