--- a/src/Dashboards/MainDashboard/MainDashboard.css
+++ b/src/Dashboards/MainDashboard/MainDashboard.css
@@ -1,3 +1,199 @@
+@media only screen and (min-width: 1000px) {
+  body {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(229, 229, 229, 0.22);
+  }
+
+  .main-dashboard {
+
+    background-color: white;
+    width: 60%;
+    height: 100%;
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, 0%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .main-dashboard h1 {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 28px;
+    color: #094A59;
+    width: 250px;
+    text-align: center;
+    margin-top: 150px;
+  }
+
+  .add-button {
+    width: 75px;
+    height: 75px;
+    background: #FFFFFF;
+    border: 2.2px solid #69C7BF;
+    margin-top: -25px;
+    box-sizing: border-box;
+    border-radius: 50%;
+    color: #69C7BF;
+    font-size: 25px;
+    font-weight: 600;
+    transition: .8s;
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
+  }
+
+  .add-button:hover {
+    background-color: #69C7BF;
+    color: #FFFFFF;
+    cursor: pointer;
+    transition: .5s;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  body {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(229, 229, 229, 0.22);
+  }
+
+  .main-dashboard {
+
+    background-color: white;
+    width: 60%;
+    height: 100%;
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, 0%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .main-dashboard h1 {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 28px;
+    color: #094A59;
+    width: 250px;
+    text-align: center;
+    margin-top: 150px;
+  }
+
+  .add-button {
+    width: 75px;
+    height: 75px;
+    background: #FFFFFF;
+    border: 2.2px solid #69C7BF;
+    margin-top: -25px;
+    box-sizing: border-box;
+    border-radius: 50%;
+    color: #69C7BF;
+    font-size: 25px;
+    font-weight: 600;
+    transition: .8s;
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
+  }
+
+  .add-button:hover {
+    background-color: #69C7BF;
+    color: #FFFFFF;
+    cursor: pointer;
+    transition: .5s;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+  }
+  html {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow:auto;
+  }
+  .root {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  .app {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: rgba(229, 229, 229, 0.22);
+  }
+
+  .main-dashboard-container {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+  }
+
+  .main-dashboard {
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+  }
+
+  .main-dashboard h1 {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 28px;
+    color: #094A59;
+    width: 250px;
+    text-align: center;
+    margin-top: 30px;
+  }
+
+  .add-button {
+    width: 75px;
+    height: 75px;
+    margin-top: 30px;
+    background: #FFFFFF;
+    border: 2.2px solid #69C7BF;
+    box-sizing: border-box;
+    border-radius: 50%;
+    color: #69C7BF;
+    font-size: 25px;
+    font-weight: 600;
+    transition: .8s;
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
+  }
+
+  .add-button:hover {
+    background-color: #69C7BF;
+    color: #FFFFFF;
+    cursor: pointer;
+    transition: .5s;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   * {
     margin: 0;
@@ -84,59 +280,3 @@
   }
 }
 
-
-
-@media only screen and (min-width: 1000px) {
-  body {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(229, 229, 229, 0.22);
-  }
-
-  .main-dashboard {
-
-    background-color: white;
-    width: 60%;
-    height: 100%;
-    position: absolute;
-    left: 50%;
-    right: 50%;
-    transform: translate(-50%, 0%);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-
-  .main-dashboard h1 {
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 28px;
-    color: #094A59;
-    width: 250px;
-    text-align: center;
-    margin-top: 150px;
-  }
-
-  .add-button {
-    width: 75px;
-    height: 75px;
-    background: #FFFFFF;
-    border: 2.2px solid #69C7BF;
-    margin-top: -25px;
-    box-sizing: border-box;
-    border-radius: 50%;
-    color: #69C7BF;
-    font-size: 25px;
-    font-weight: 600;
-    transition: .8s;
-    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
-  }
-
-  .add-button:hover {
-    background-color: #69C7BF;
-    color: #FFFFFF;
-    cursor: pointer;
-    transition: .5s;
-  }
-}
