--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -1,3 +1,126 @@
+@media only screen and (min-width: 768px) {
+  .navbar {
+    background-color: #69C7BF;
+    height: 160px;
+    width: 100%;
+    position: fixed;
+    top: 0px;
+    z-index: 5;
+  }
+  .navbar-home {
+    position: absolute;
+    width: 175px;
+    height: 45px;
+    top: 50%;
+    left: 19%;
+    transform: translate(0, -15%);
+  }
+  .navbar-home:hover {
+    cursor: pointer;
+  }
+
+  .navbar-container {
+    display: flex;
+    position: absolute;
+    top: 40%;
+    right: 16%;
+    flex-direction: row;
+  }
+
+  .logout-button {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 23px;
+    color:#FFFFFF;
+    transition: .4s; 
+    position: relative;
+    right: 85%;
+  }
+
+  .logout-button:hover {
+    cursor: pointer;
+    color: rgb(82, 156, 150);
+    transition: 1s;
+  }
+
+  .settings-button:hover {
+    cursor: pointer;
+  }
+
+  .settings-button {
+    width: 22px;
+    height: 22px;
+    position: absolute;
+    right: 250%;
+    top: 33%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .navbar {
+    background-color: #69C7BF;
+    height: 130px;
+    width: inherit;
+    position: absolute;
+    top: 0px;
+    z-index: 5;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  .navbar-home {
+    position: absolute;
+    width: 175px;
+    height: 45px;
+  }
+  .navbar-home:hover {
+    cursor: pointer;
+  }
+
+  .navbar-container {
+    display: flex;
+    position: absolute;
+    top: 40%;
+    right: 12%;
+    flex-direction: row;
+  }
+
+  .logout-button {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 23px;
+    color:#FFFFFF;
+    transition: .4s; 
+    position: relative;
+    right: 85%;
+    display: none;
+  }
+
+  .logout-button:hover {
+    cursor: pointer;
+    color: rgb(82, 156, 150);
+    transition: 1s;
+  }
+
+  .settings-button:hover {
+    cursor: pointer;
+  }
+
+  .settings-button {
+    display: none;
+    width: 22px;
+    height: 22px;
+    position: absolute;
+    right: 250%;
+    top: 33%;
+  }
+}
+
 @media only screen and (max-width: 599px) {
   .navbar {
     background-color: #69C7BF;
@@ -61,63 +184,3 @@
   }
 }
 
-
-@media only screen and (min-width: 600px) {
-  .navbar {
-    background-color: #69C7BF;
-    height: 160px;
-    width: 100%;
-    position: fixed;
-    top: 0px;
-    z-index: 5;
-  }
-  .navbar-home {
-    position: absolute;
-    width: 175px;
-    height: 45px;
-    top: 50%;
-    left: 19%;
-    transform: translate(0, -15%);
-  }
-  .navbar-home:hover {
-    cursor: pointer;
-  }
-
-  .navbar-container {
-    display: flex;
-    position: absolute;
-    top: 40%;
-    right: 16%;
-    flex-direction: row;
-  }
-
-  .logout-button {
-    font-family: 'Work Sans';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 23px;
-    color:#FFFFFF;
-    transition: .4s; 
-    position: relative;
-    right: 85%;
-  }
-
-  .logout-button:hover {
-    cursor: pointer;
-    color: rgb(82, 156, 150);
-    transition: 1s;
-  }
-
-  .settings-button:hover {
-    cursor: pointer;
-  }
-
-  .settings-button {
-    width: 22px;
-    height: 22px;
-    position: absolute;
-    right: 250%;
-    top: 33%;
-  }
-}
